translation-tool/inputs/source_meta/objects/YAHS_Tier_to_Profile_Map__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting for tier to profile mapping</description>
    <fields>
        <fullName>Business_Model__c</fullName>
        <description>To store business model type for which this setting is applicable.</description>
        <inlineHelpText>Please enter the business model type for which this setting is applicable.</inlineHelpText>
        <label>Business Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profiles__c</fullName>
        <label>Profiles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Tier__c</fullName>
        <label>Support Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>YAHS Tier to Profile Map</label>
</CustomObject>